syntax = "proto3";

package daprclock.hourhand.v1;
option go_package = "github.com/kzmake/examples/dapr-clock/api/hourhand/v1;hourhand";

import "google/api/annotations.proto";

service HourHand {
  rpc Now(NowRequest) returns (NowResponse);
}

message NowRequest {}

message NowResponse {
  string hour = 1;
}
